<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="20dp"
    android:layout_margin="15dp"
    tools:context=".ui.CAlculateFragment">

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image"
                android:layout_width="60dp"
                android:layout_height="45dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.05" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:text="@string/app_name"
                app:layout_constraintBottom_toBottomOf="@+id/image"
                app:layout_constraintStart_toEndOf="@+id/image"
                app:layout_constraintTop_toTopOf="@+id/image"
                tools:listitem="@layout/spinner_item" />
        </LinearLayout>

        <EditText
            android:id="@+id/edit"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/title" />



        <LinearLayout
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image2"
                android:layout_width="60dp"
                android:layout_height="45dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.05" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:text="@string/app_name"
                app:layout_constraintBottom_toBottomOf="@+id/image"
                app:layout_constraintStart_toEndOf="@+id/image"
                app:layout_constraintTop_toTopOf="@+id/image"
                tools:listitem="@layout/spinner_item" />
        </LinearLayout>
        <TextView
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="start"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/sotilishi"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/olinishi"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="start"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:weightSum="2">


            <TextView
                android:id="@+id/card_sell"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_10_530_87_uzs"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/card_buy"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_10_530_87_uzs"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>