<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    app:cardCornerRadius="15dp"
    android:layout_height="wrap_content"
    app:cardMaxElevation="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="25dp"
            android:gravity="center_vertical"
            android:padding="5dp">

            <ImageView
                android:id="@+id/image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="UZS"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">
                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:gravity="start"
                        android:paddingStart="30dp"
                        android:paddingEnd="30dp"
                        android:weightSum="2">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/sotilishi"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/olinishi"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="start"
                        android:paddingStart="30dp"
                        android:paddingEnd="30dp"
                        android:weightSum="2">


                        <TextView
                            android:id="@+id/card_sell"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/_10_530_87_uzs"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/card_buy"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/_10_530_87_uzs"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>
                <androidx.cardview.widget.CardView
                    android:layout_width="50dp"
                    android:id="@+id/calculate"
                    android:backgroundTint="#F9F9F9"
                    app:cardCornerRadius="50dp"
                    android:layout_height="50dp">
                    <ImageView
                        android:layout_gravity="center"
                        android:src="@drawable/calculator"
                        android:layout_width="30dp"
                        android:layout_height="30dp"/>
                </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>